syntax = "proto3";

option go_package = "github.com/hyle-team/tss-svc/resources";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
message Transaction {
  string hash = 1;
  string chain_id = 2;
}